# webcui

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  Makefile.win  Pipfile  README.md  build.py  pyproject.toml  setup.py
deploytools/google/: readme.txt  setup.py  tutorial.md
docker/: builder.docker  debian.docker  deployenv.docker  tester.docker  webcui.docker
python/: requirements-dev.txt  requirements.txt  setup.py
python/admin/: restart.py  run.py
python/buildtools/: buildenv.py  mkscreenshots.py
python/python/: requirements-dev.txt
python/webcui/: .#deployer.py  __init__.py  app.py  client.py  deployer.py  env_runner.py  runner.py  server.py
test/: conftest.py  mkdocker.py
test/app/: app_basic.py  app_param_types.py  test_basic_app.py
test/example/: README.md
test/example/basic/: cmd.py  webcui.conf
test/feature/: README.md  basic_app_test.py  param_types_test.py  test_deploy.py
webcui/: app.py
www/: form.html
