[tool.poetry]
name = "webcui"
version = "0.1.2"
description = "A web command user interface"
authors = ["Per Appelgren <per@appgren.se>"]

[tool.poetry.dependencies]
python = "^3.6"
responder = "^1.3"
paramiko = "^2.4"
toml = "^0.10.0"
dataclasses = "^0.6.0"
click = "^7.0"
docker = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
beautifulsoup4 = "^4.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
